--- a/_posts/2006-08-01-compiler.markdown
+++ b/_posts/2006-08-01-compiler.markdown
@@ -6,5 +6,5 @@ image: "img/timeline/compiler.jpg"
 side: right
 size: tiny
 ---
-Tokenising, lexing, parsing...for the first time I really understood the mechanics of how some code written in a high-level language ultimately ran on hardware.
-All those linux build tools I'd seen in scripts actually made sense.
+Tokenising, lexing, parsing...for the first time I really knew the mechanics of how some code written in a high-level language ultimately ran on hardware.
+Finally I understood those commands I'd been required to run to get linux applications to build from source for all those years. Still didn't understand why linux people like to make you do this.
