Added futurist meetup entry

--- a/_posts/2017-05-01-meetup.markdown
+++ b/_posts/2017-05-01-meetup.markdown
@@ -2,7 +2,7 @@
 layout: null
 title: " "
 subtitle: Newcastle Futurists Meetup
-image: "img/timeline/datastreaming.jpg"
+image: "img/timeline/meetup.jpg"
 side: right
 size: tiny
 ---
